# unofficial-dolphin-manager

./: .gitignore  CMakeLists.txt  OLD_MAINLOOP.txt  vcpkg-lists.json
src/: CMakeLists.txt  main.cpp  main.h
src/UI/: CMakeLists.txt  app_window.cpp  app_window.h
src/UI/menubar/: CMakeLists.txt  menubar.cpp  menubar.h
src/UI/ui_windows/: CMakeLists.txt  main_window.cpp  main_window.h
